--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
+    "node-sass": "^4.14.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
